<resources>
    <string name="app_name">BANKTJ</string>
    <string name="transaction_history">Transaction History</string>
    <string name="send_money">Send Money</string>
    <string name="account_balance">Account Balance</string>
    <string name="_0_00">$0.00</string>
    <string name="temp_transaction_line">temp transaction line</string>
    <string name="how_much_money_0_00">How much money? (0.00)</string>
    <string name="user_id_of_recipient">User ID of Recipient</string>
    <string name="send">Send</string>
    <string name="username">No Account Signed In</string>
    <string name="create_account">Create Account</string>
    <string name="signin">Sign In</string>
    <string name="usernameinput">ENTER EMAIL</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_holder">ENTER PASSWORD</string>
</resources>